# presentation-search

./: .gitignore  LICENSE  README.md  pyproject.toml
.dvc/: config
dashboards/: app.py  data_processing.py  descriptions_page.py  files_page.py
data/: .dvcignore  description.md  interim.dvc  raw.dvc
docs/: README.md  system_design_doc.md
docs/reports/: lower_resolution_research.md
docs/workflow/: data_description.md  data_version_control.md  eval.md  pdf_related.md  resolutions.md  run_commands.sh
notebooks/data_description/: count_descriptions.ipynb  count_descriptions_15.ipynb  count_presentations.ipynb  count_presentations_costs.ipynb  count_presentations_metrics.ipynb
notebooks/evaluation/: eval_langsmith.ipynb  eval_langsmith_prototype.ipynb  eval_mlflow.ipynb
notebooks/prompts/: descriptions_examples.ipynb  testing_prompts.ipynb
notebooks/rag/: chroma_metric_research.ipynb  chroma_noanswer_queries.ipynb  chroma_queries.ipynb  llm_reranking.ipynb  manage_db.ipynb
notebooks/weird-slides/: llamaparse.ipynb  lowering_img_quality.ipynb  weird_slides.ipynb
src/: __init__.py  run_descriptions.py  run_evaluation.py  run_json2chroma.py
src/bash/: extract_pages.sh
src/chains/: __init__.py  chain_funcs.py  chains.py  parsers.py  pipelines.py  prompts.py
src/config/: __init__.py  config.py  logging.py  model_setup.py  multiline_wrapper.py  navigator.py  output_formatting.py  spreadsheets.py
src/eda/: __init__.py  explore.py
src/eval/: __init__.py  eval_mlflow.py  evaluate.py  run_eval.py
src/pdf_utils/: chains.py  image_utlis.py  pdf2image.py  pipelines.py
src/processing/: __init__.py  image_utlis.py  pdf_utils.py
src/prompts/: vit_describe_image_ru_brief.txt  vit_describe_image_ru_detailed.txt  vit_describe_slide_instruction.txt
src/rag/: score.py  (+3 more)
(+12 files in other folders)
