[tool.poetry]
name = "presentation-rag"
version = "0.1.0"
description = "Presentation RAG Raft Internship"
authors = ["Ilia Tambovtsev <ilia.tambovtsev@raftds.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
pdf2image = "^1.17.0"
pymupdf = "^1.24.12"
langchain = "^0.3.4"
langchain-community = "^0.3.3"
langchain-openai = "^0.2.3"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
